--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar saída</title>
-     <!-- Bootstrap CSS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- jQuery UI CSS -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- jQuery UI JS -->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-     <style>
+
+    <style>
         body, html {
             height: 100%;
             margin: 0;
@@ -34,10 +41,9 @@
         .form-group {
             margin-bottom: 20px;
         }
-           
         input[readonly] {
-        background-color: #0707078c; 
-    }
+            background-color: #0707078c; 
+        }
         .btn-primary {
             display: block;
             width: 100%;
@@ -48,10 +54,26 @@
     </style>
 
     <script>
+        $(document).ready(function() {
+            // pegando os itinerários e serviços do servidor
+            var itinerarios = <%- JSON.stringify(itinerarios) %>;
+            var servicos = <%- JSON.stringify(servicos) %>;
+            
+            $("#itinerario").autocomplete({
+                source: itinerarios,
+                minLength: 1
+            });
+            
+            $("#servico").autocomplete({
+                source: servicos,
+                minLength: 1
+            });
+        });
+
         function salvarDados() {
             const veiculo_ID = document.getElementById('veiculo').value;
-            const itinerario = document.getElementById('itinerario').value === 'Outro' ? document.getElementById('novoItinerario').value : document.getElementById('itinerario').value;
-            const servico = document.getElementById('servico').value === 'Outro' ? document.getElementById('novoServico').value : document.getElementById('servico').value;
+            const itinerario = document.getElementById('itinerario').value;
+            const servico = document.getElementById('servico').value;
             const kmSaida = document.getElementById('kmSaida').value;
             const dataSaida = document.getElementById('dataSaida').value;
             const usuario_ID = document.getElementById('usuario_ID').value; // Atualizado para buscar o campo oculto
@@ -70,20 +92,19 @@
                     usuario_ID
                 }),
             })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Erro ao salvar dados de saída');
+                }
+                return response.json();
+            })
+            .then(data => {
+                console.log('Dados salvos com sucesso:', data);
+                // Aqui você pode redirecionar ou realizar outras ações após salvar os dados
+            })
             .catch(error => {
                 console.error('Erro ao salvar dados de saída:', error);
             });
-        }
-
-        function mostrarCampoOutro(selectElement, campoOutroID) {
-            const campoOutro = document.getElementById(campoOutroID);
-            if (selectElement.value === 'Outro') {
-                campoOutro.style.display = 'block';
-                campoOutro.required = true;
-            } else {
-                campoOutro.style.display = 'none';
-                campoOutro.required = false;
-            }
         }
     </script>
 </head>
@@ -113,23 +134,11 @@
             </div>
             <div class="form-group">
                 <label for="itinerario">Itinerário:</label>
-                <select id="itinerario" name="itinerario" class="form-control" required onchange="mostrarCampoOutro(this, 'novoItinerario')">
-                    <% itinerarios.forEach(function(itinerario) { %>
-                        <option value="<%= itinerario %>"><%= itinerario %></option>
-                    <% }); %>
-                    <option value="Outro">Outro</option>
-                </select>
-                <input type="text" id="novoItinerario" name="novoItinerario" class="form-control" placeholder="Digite o novo itinerário" style="display: none;">
+                <input type="text" id="itinerario" name="itinerario" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="servico">Serviço:</label>
-                <select id="servico" name="servico" class="form-control" required onchange="mostrarCampoOutro(this, 'novoServico')">
-                    <% servicos.forEach(function(servico) { %>
-                        <option value="<%= servico %>"><%= servico %></option>
-                    <% }); %>
-                    <option value="Outro">Outro</option>
-                </select>
-                <input type="text" id="novoServico" name="novoServico" class="form-control" placeholder="Digite o novo serviço" style="display: none;">
+                <input type="text" id="servico" name="servico" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="kmSaida">Quilometragem Inicial:</label>
@@ -145,7 +154,5 @@
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
-
-    
 </body>
 </html>
