--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -15,43 +15,8 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/forms.css">
 
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        .header, .footer {
-            background-color: #5f5f5f; 
-            height: 50px; 
-            line-height: 50px; 
-            text-align: center; 
-        }
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            max-width: 500px;
-            margin: 0 auto;
-            padding-top: 20px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        input[readonly] {
-            background-color: #0707078c; 
-        }
-        .btn-primary {
-            display: block;
-            width: 100%;
-        }
-        button[type="submit"], button[type="button"] {
-            margin-bottom: 10px;
-        }
-    </style>
 
     <script>
         $(document).ready(function() {
