--- a/views/motoristas/menu-motorista.ejs
+++ b/views/motoristas/menu-motorista.ejs
@@ -9,36 +9,8 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        .header, .footer {
-            background-color: #5f5f5f;
-            height: 50px;
-            line-height: 50px;
-            text-align: center;
-        }
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            max-width: 500px;
-            margin: 0 auto;
-            padding-top: 20px;
-        }
-        .btn {
-            margin-bottom: 10px;
-            width: 80%; 
-            padding: 20px; 
-            font-size: 18px; 
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/assets/menus.css">
+
 </head>
 <body>
     <!-- Header -->
