--- a/public/assets/forms.css
+++ b/public/assets/forms.css
@@ -3,9 +3,10 @@ body, html {
     margin: 0;
     display: flex;
     flex-direction: column;
+    background: linear-gradient(180deg, #00c3ff, #7e9eef);
 }
 .header, .footer {
-    background-color: #5f5f5f; 
+    background-color:linear-gradient(180deg, #0b264d, #eff6f6);
     height: 50px; 
     line-height: 50px; 
     text-align: center; 
@@ -18,13 +19,16 @@ body, html {
     max-width: 500px;
     margin: 0 auto;
     padding-top: 20px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .form-group {
     margin-bottom: 20px;
 }
 
 input[readonly] {
-background-color: #0707078c; 
+background-color: #2299ae8c; 
 }
 .btn-primary {
     display: block;
