--- a/public/assets/menus.css
+++ b/public/assets/menus.css
@@ -3,12 +3,15 @@ body, html {
     margin: 0;
     display: flex;
     flex-direction: column;
+    background: linear-gradient(#56BC43, #43BCA9);
 }
 .header, .footer {
-    background-color: #5f5f5f;
-    height: 50px;
+    background-color: #346c02;
+    height: 70px;
     line-height: 50px;
     text-align: center;
+    border-radius: 10px;
+    color: aliceblue;
 }
 .container {
     flex: 1;
@@ -24,5 +27,7 @@ body, html {
     margin-bottom: 10px;
     width: 80%; 
     padding: 20px; 
-    font-size: 18px; 
+    font-size: 18px;
+    background-color: #346c02;
+    color:aliceblue 
 }
