--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -7,38 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        .header, .footer {
-            background-color: #5f5f5f; 
-            height: 50px; 
-            line-height: 50px; 
-            text-align: center; 
-        }
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            max-width: 500px;
-            margin: 0 auto;
-            padding-top: 20px;
-        }
-  
-        .btn-primary {
-            display: block;
-            width: 100%;
-        }
-        button[type="submit"], button[type="button"] {
-            margin-bottom: 10px;
-        }
-    </style>
+    
 
 </head>
 <body>
@@ -46,43 +15,48 @@
     <%- include('../partials/header.ejs', { title: 'Historico de viagens/Log de viagens' }) %>
 
     <div class="container">
-        <h2>Histórico de Viagens</h2>
-        <table class="table">
+        <h1>Histórico de Viagens</h1>
+        <table class="table table-striped">
             <thead>
                 <tr>
-                        <th>ID</th>
-                        <th>Veículo</th>
-                        <th>Usuário</th>
-                        <th>Itinerário</th>
-                        <th>Serviço</th>
-                        <th>Km de Saída</th>
-                        <th>Data de Saída</th>
-                        <th>Km de Chegada</th>
-                        <th>Data de Chegada</th>
-                        <th>Data de Criação</th>
-                        <th>Data de Modificação</th>
+                    <th>ID da Viagem</th>
+                    <th>Nome do Usuário</th>
+                    <th>Modelo do Veículo</th>
+                    <th>Placa do Veículo</th>
+                    <th>Itinerário</th>
+                    <th>Serviço</th>
+                    <th>Data de Saída</th>
+                    <th>Data de Chegada</th>
+                    <th>Km de Saída</th>
+                    <th>Km de Chegada</th>
+                    <th>Ocorrência</th>
                 </tr>
             </thead>
             <tbody>
-                <% viagens.forEach(function(viagem) { %>
+                <% viagens.forEach(viagem => { %>
                     <tr>
                         <td><%= viagem.viagem_ID %></td>
-                        <td><%= viagem.usuario_ID %></td>
-                        <td><%= viagem.veiculo_ID %></td>
+                        <td><%= viagem.nome %></td>
+                        <td><%= viagem.modelo %></td>
+                        <td><%= viagem.placa %></td>
                         <td><%= viagem.itinerario %></td>
                         <td><%= viagem.servico %></td>
-                        <td><%= viagem.kmSaida %></td>
-                        <td><%= viagem.kmChegada %></td>
                         <td><%= viagem.dataSaida %></td>
                         <td><%= viagem.dataChegada %></td>
-                        <td><%= viagem.createdAt %></td>
-                        <td><%= viagem.updatedAt %></td>
-                        
+                        <td><%= viagem.kmSaida %></td>
+                        <td><%= viagem.kmChegada %></td>
+                        <td>
+                            <% if (viagem.ocorrencias && viagem.ocorrencias.length > 0) { %>
+                                <strong>Assunto:</strong> <%= viagem.ocorrencias[0].assunto %><br>
+                                <strong>Envolvidos:</strong> <%= viagem.ocorrencias[0].envolvidos %>
+                            <% } else { %>
+                                Nenhuma ocorrência
+                            <% } %>
+                        </td>
                     </tr>
                 <% }); %>
             </tbody>
         </table>
-        <button type="button" class="btn btn-secondary" onclick="location.href='/motoristas/menu-adm'">Voltar</button>
     </div>
    
 
