--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,35 +7,9 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/assets/menus.css">
     
-    <style>
-        .header, .footer {
-            background-color: #5f5f5f; /* Fundo cinza */
-            height: 50px; /* Altura do cabeçalho e rodapé */
-            line-height: 50px; /* Alinhamento vertical do texto */
-            text-align: center; /* Centralização do texto */
-        }
-
-        /* Ajuste para footer ficar fixo na parte inferior */
-        html, body {
-            height: 100%;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .main-content {
-            flex: 1; /* Para ocupar o espaço restante */
-        }
-
-        /* Ajuste para container ser mais espaçoso e centralizado */
-        .container {
-            max-width: 600px; /* Largura máxima do container */
-            margin: auto; /* Centraliza horizontalmente */
-        }
-    </style>
+  
     
 </head>
 <body>
